// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenSelectButton component should Render correctly 1`] = `
<TouchableOpacity>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F2F4F6",
        "borderRadius": 100,
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 12,
              "height": 24,
              "width": 24,
            },
            undefined,
            undefined,
            undefined,
            {
              "alignItems": "center",
              "backgroundColor": "#F2F4F6",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#24272A",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#24272A",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Select a token
    </Text>
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 18,
          },
          {
            "color": "#535A61",
            "marginLeft": 10,
            "marginRight": 5,
            "textAlign": "right",
          },
          {
            "fontFamily": "FontAwesome",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`TokenSelectButton component should Render correctly 2`] = `
<SelectorButton>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      symbol="ETH"
    />
  </View>
  <Text
    primary={true}
  >
    ETH
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 3`] = `
<SelectorButton>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      symbol="cDAI"
    />
  </View>
  <Text
    primary={true}
  >
    cDAI
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 4`] = `
<SelectorButton>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      icon="https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ"
      symbol="DAI"
    />
  </View>
  <Text
    primary={true}
  >
    DAI
  </Text>
</SelectorButton>
`;

exports[`TokenSelectButton component should Render correctly 5`] = `
<SelectorButton
  onPress={[MockFunction]}
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <TokenIcon
      icon="https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ"
      symbol="DAI"
    />
  </View>
  <Text
    primary={true}
  >
    DAI
  </Text>
</SelectorButton>
`;
